--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         vacances
     </title>
     <meta name="description" content="Nous vous aidons à planifier vos vacances ! Avec Réservia, trouvez le meilleur hébergement et diverses activités dans la ville de votre choix.">
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
-    <link rel="stylesheet" href="/assets/css/style.css" /> 
+    <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
+    <link rel="stylesheet" href="./assets/css/style.css" /> 
 </head>
 
 <body>
     <header>
         <div class="navbar">
             <a class="brand" href="">
-                <img src="assets/images/logo/Reservia.svg" alt="Logo du site Reservia" />
+                <img src="./assets/images/logo/Reservia.svg" alt="Logo du site Reservia" />
             </a>
             <nav class="main-nav">
                 <a href="#lodging">Hébergements</a>
@@ -59,7 +59,7 @@
                     <a href="">
                         <article class="card card-city">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                     alt="Chambre de l'auberge la Cannebière">
                             </div>
                             <div class="text-wrapper">
@@ -78,7 +78,7 @@
                     <a href="">
                         <article class="card card-city">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                     alt="Chambre de l'Hôtel du port">
                             </div>
                             <div class="text-wrapper">
@@ -97,7 +97,7 @@
                     <a href="">
                         <article class="card card-city">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                     alt="Chambre de l'hôtel Les mouettes">
                             </div>
                             <div class="text-wrapper">
@@ -116,7 +116,7 @@
                     <a href="">
                         <article class="card card-city">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                     alt="Chambre de l'Hôtel de la mer">
                             </div>
                             <div class="text-wrapper">
@@ -135,7 +135,7 @@
                     <a href="">
                         <article class="card card-city">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                     alt="Chambre de l'auberge Le Panier">
                             </div>
                             <div class="text-wrapper">
@@ -154,7 +154,7 @@
                     <a href="">
                         <article class="card card-city">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                     alt="Chambre de l'hôtel Amina">
                             </div>
                             <div class="text-wrapper">
@@ -182,7 +182,7 @@
                     <a href="">
                         <article class="card card-popular">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                     alt="Chambre de l'hôtel Le soleil du matin">
                             </div>
                             <div class="text-wrapper">
@@ -201,7 +201,7 @@
                     <a href="">
                         <article class="card card-popular">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                     alt="Chambre de la maison d'hôte Au coeur de l'eau">
                             </div>
                             <div class="text-wrapper">
@@ -220,7 +220,7 @@
                     <a href="">
                         <article class="card card-popular">
                             <div class="img-wrapper">
-                                <img src="/assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                <img src="./assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                     alt="Chambre de l'hôtel Tout bleu et Blanc">
                             </div>
                             <div class="text-wrapper">
@@ -249,7 +249,7 @@
                         <a class="big card card-activities" href="">
                             <article>
                                 <div class="img-wrapper">
-                                    <img src="/assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                                    <img src="./assets/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                                         alt="Paysage du Vieux Port">
                                 </div>
                                 <div class="text-wrapper">
@@ -260,7 +260,7 @@
                         <a class="medium card card-activities" href="">
                             <article>
                                 <div class="img-wrapper">
-                                    <img src="/assets/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                                    <img src="./assets/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                                         alt="Paysage du Fort de Pomègues">
                                 </div>
                                 <div class="text-wrapper">
@@ -271,7 +271,7 @@
                         <a class="small card card-activities" href="">
                             <article>
                                 <div class="img-wrapper">
-                                    <img src="/assets/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                                    <img src="./assets/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                                         alt="Paysage des Iles du Frioul">
                                 </div>
                                 <div class="text-wrapper">
@@ -284,7 +284,7 @@
                         <a class="big card card-activities" href="">
                             <article>
                                 <div class="img-wrapper">
-                                    <img src="/assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                                    <img src="./assets/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                                         alt="Paysage du Parc National des Calanques">
                                 </div>
                                 <div class="text-wrapper">
@@ -295,7 +295,7 @@
                         <a class="small card card-activities" href="">
                             <article>
                                 <div class="img-wrapper">
-                                    <img src="/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                                    <img src="./assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                                         alt="Paysage de Notre-Dame-de-la-Garde">
                                 </div>
                                 <div class="text-wrapper">
@@ -306,7 +306,7 @@
                         <a class="medium card card-activities" href="">
                             <article>
                                 <div class="img-wrapper">
-                                    <img src="/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                                    <img src="./assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                         alt="Paysage du Parc Longchamp">
                                 </div>
                                 <div class="text-wrapper">
