--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button type="button" class="search-icon"><i aria-label="Rechercher" class="fas fa-search fa-lg"></i></button>
             </form>
             <div class="tags">
-                <h2>Filtres</h2>
+                <div>Filtres</div>
                 <button class="tag"><i class="fas fa-money-bill-wave"></i>économique</button>
                 <button class="tag"><i class="fas fa-child"></i>familial</button>
                 <button class="tag"><i class="fas fa-heart"></i>romantique</button>
@@ -64,7 +64,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Auberge la Cannebière</h3>
-                                <p>Nuit à partir de <span class="low-price">25€</span></p>
+                                <p>Nuit à partir de <strong>25€</strong></p>
                                 <span>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -83,7 +83,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Hôtel du port</h3>
-                                <p>Nuit à partir de <span>52€</span></p>
+                                <p>Nuit à partir de 52<strong>€</strong></p>
                                 <span>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -102,7 +102,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Hôtel Les mouettes</h3>
-                                <p>Nuit à partir de <span>76€</span></p>
+                                <p>Nuit à partir de 76<strong>€</strong></p>
                                 <span>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -121,7 +121,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Hôtel de la mer</h3>
-                                <p>Nuit à partir de <span>46€</span></p>
+                                <p>Nuit à partir de 46<strong>€</strong></p>
                                 <span>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -140,7 +140,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Auberge Le Panier</h3>
-                                <p>Nuit à partir de <span class="low-price">23€</span></p>
+                                <p>Nuit à partir de <strong>23€</strong></p>
                                 <span>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -159,7 +159,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Hôtel chez Amina</h3>
-                                <p>Nuit à partir de <span>96€</span></p>
+                                <p>Nuit à partir de 96<strong>€</strong></p>
                                 <span>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -187,7 +187,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Hôtel Le soleil du matin</h3>
-                                <p>Nuit à partir de <span>128€</span></p>
+                                <p>Nuit à partir de 128<strong>€</strong></p>
                                 <span class="vote">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -206,7 +206,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                                <p>Nuit à partir de <span>71€</span></p>
+                                <p>Nuit à partir de 71<strong>€</strong></p>
                                 <span class="vote">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -225,7 +225,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
-                                <p>Nuit à partir de <span>68€</span></p>
+                                <p>Nuit à partir de 68<strong>€</strong></p>
                                 <span class="vote">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
