--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <i class="fas fa-map-marker-alt clr-black"></i>
                 <input class="city" type="text" placeholder="Marseille, France" aria-label="Ecrire une ville" />
                 <button type="button" class="search">Rechercher</button>
-                <button type="button" class="search-icon"><i aria-label="Rechercher" class="fas fa-search fa-lg"></i></button>
+                <button type="button" class="search-icon"><i class="fas fa-search fa-lg"></i></button>
             </form>
             <div class="tags">
                 <div>Filtres</div>
